# xjasper

./: .gitignore  Cargo.toml  README.md
crates/xjasper-cli/: Cargo.toml
crates/xjasper-cli/src/: main.rs
crates/xjasper-core/: Cargo.toml
crates/xjasper-core/src/: compiler.rs  expression.rs  lib.rs  template.rs  types.rs
crates/xjasper-data/: Cargo.toml
crates/xjasper-data/src/: datasource.rs  lib.rs  variables.rs
crates/xjasper-engine/: Cargo.toml
crates/xjasper-engine/src/: lib.rs
crates/xjasper-layout/: Cargo.toml
crates/xjasper-layout/src/: engine.rs  filled.rs  lib.rs
crates/xjasper-render/: Cargo.toml
crates/xjasper-render/src/: common.rs  html.rs  image.rs  lib.rs  pdf.rs
crates/xjasper-wasm/: Cargo.toml
crates/xjasper-wasm/src/: lib.rs
docs/: 01-competitive-analysis.md  02-technical-design.md  03-financial-requirements.md  04-development-guide.md  05-tech-stack-update.md  stage1-test-report.md
docs/plans/: 2026-03-01-xjasper-initial-design.md
examples/: README.md  data.json  simple-invoice.json
schema/: template-v0.1.json
