[workspace]
resolver = "2"
members = [
    "crates/xjasper-core",
    "crates/xjasper-data",
    "crates/xjasper-layout",
    "crates/xjasper-render",
    "crates/xjasper-engine",
    "crates/xjasper-wasm",
    "crates/xjasper-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["XJasper Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/xuweizhengo/xjasper"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal arithmetic (financial precision)
rust_decimal = { version = "1.33", features = ["serde-with-str"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# PDF generation
printpdf = "0.7"

# Font handling
rustybuzz = "0.14"
ttf-parser = "0.21"

# Image rendering
tiny-skia = "0.11"
image = "0.25"

# Expression engine
rhai = { version = "1.17", features = ["serde", "decimal"] }

# Internationalization
icu = "1.4"

# WASM bindings
wasm-bindgen = "0.2"
