[package]
name = "xjasper-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for XJasper"

[[bin]]
name = "xjasper"
path = "src/main.rs"

[dependencies]
xjasper-engine = { path = "../xjasper-engine" }
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
