[package]
name = "xjasper-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Facade API for XJasper report engine"

[dependencies]
xjasper-core = { path = "../xjasper-core" }
xjasper-data = { path = "../xjasper-data" }
xjasper-layout = { path = "../xjasper-layout" }
xjasper-render = { path = "../xjasper-render" }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
