[package]
name = "xjasper-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rendering engines (PDF, image, HTML) for XJasper"

[dependencies]
xjasper-core = { path = "../xjasper-core" }
xjasper-layout = { path = "../xjasper-layout" }
printpdf = { workspace = true }
rustybuzz = { workspace = true }
ttf-parser = { workspace = true }
tiny-skia = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
