[package]
name = "xjasper-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for XJasper"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
xjasper-engine = { path = "../xjasper-engine" }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
